#ifndef CHESSTYPE_H
#define CHESSTYPE_H
// Just ensure the class is defined only once

// Categorize the chesstype
enum class ChessType {
    Pawn, 
    Knight, 
    Bishop, 
    Rook, 
    Queen, 
    King
};

#endif

