#ifndef COLOR_H
#define COLOR_H
// Just ensure the class is defined only once

// Categorize the colors
enum class Color {
    WHITE, 
    BLACK, 
    NOTHING
};

#endif

